--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8888
 
 spring.jpa.hibernate.ddl-auto=create
-#spring.datasource.url=jdbc:h2:mem:practice_db
-spring.datasource.url=jdbc:h2:file:./data/demo
+spring.datasource.url=jdbc:h2:mem:practice_db
+#spring.datasource.url=jdbc:h2:file:./data/demo
 spring.datasource.username=sa
 spring.datasource.password=123456
 spring.datasource.driverClassName=org.h2.Driver
