--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 server.port=8888
 
-spring.datasource.url=jdbc:h2:mem:practice_db
-#spring.datasource.url=jdbc:h2:file:./data/demo
+#spring.datasource.url=jdbc:h2:mem:practice_db
+spring.datasource.url=jdbc:h2:file:./data/demo
 spring.datasource.username=sa
-spring.datasource.password=123456
+spring.datasource.password=password
 spring.datasource.driverClassName=org.h2.Driver
 
 spring.datasource.sql-script-encoding=UTF-8
 spring.datasource.initialization-mode=always
 
 #Hibernate configuration
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
