Fix OneToOne relation, remove unnecessary OneToMane relations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,13 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.datasource.driverClassName=org.h2.Driver
 
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
+
+
 spring.datasource.sql-script-encoding=UTF-8
-spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=never
 
 #Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
