--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
 spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
-
+spring.mvc.static-path-pattern=/content/**
+spring.resources.static-locations=classpath:/templates
 
 spring.datasource.sql-script-encoding=UTF-8
 spring.datasource.initialization-mode=never
