--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 server.port=8888
+date.format.pattern=dd-MM-yyyy
+#dateFormatPattern=dd-MM-yyyy;
 
 #spring.datasource.url=jdbc:h2:mem:practice_db
 spring.datasource.url=jdbc:h2:file:./data/demo
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.datasource.driverClassName=org.h2.Driver
-
-spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
-spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
-spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
 spring.mvc.static-path-pattern=/content/**
 spring.resources.static-locations=classpath:/templates
 
@@ -16,4 +17,7 @@ spring.datasource.sql-script-encoding=UTF-8
 spring.datasource.initialization-mode=never
 
 #Hibernate configuration
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=update
+#Logger
+logging.file.name=logfile.log
