--- a/pom.xml
+++ b/pom.xml
@@ -58,9 +58,9 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.modelmapper</groupId>
-            <artifactId>modelmapper</artifactId>
-            <version>2.3.8</version>
+            <groupId>ma.glasnost.orika</groupId>
+            <artifactId>orika-core</artifactId>
+            <version>1.4.6</version>
         </dependency>
     </dependencies>
 
