Database in memory

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 server.port=8888
 date.format.pattern=dd-MM-yyyy
-
-#spring.datasource.url=jdbc:h2:mem:practice_db
-spring.datasource.url=jdbc:h2:file:./data/demo
+spring.datasource.url=jdbc:h2:mem:practice_db
+#spring.datasource.url=jdbc:h2:file:./data/demo
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.datasource.driverClassName=org.h2.Driver
@@ -14,10 +13,12 @@ spring.mvc.static-path-pattern=/content/**
 spring.resources.static-locations=classpath:/templates
 
 spring.datasource.sql-script-encoding=UTF-8
-spring.datasource.initialization-mode=never
+spring.datasource.initialization-mode=always
+spring.h2.console.enabled=true
 
 #Hibernate configuration
-#spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+
 #Logger
 logging.file.name=logfile.log
