Swagger was added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=8888
-date.format.pattern=dd-MM-yyyy
 spring.datasource.url=jdbc:h2:mem:practice_db
 #spring.datasource.url=jdbc:h2:file:./data/demo
 spring.datasource.username=sa
@@ -9,8 +8,8 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
-spring.mvc.static-path-pattern=/content/**
-spring.resources.static-locations=classpath:/templates
+#spring.mvc.static-path-pattern=/content/**
+#spring.resources.static-locations=classpath:/templates
 
 spring.datasource.sql-script-encoding=UTF-8
 spring.datasource.initialization-mode=always
